scripts/nullness/annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8.txt
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/SevenZip.java:60: error: [argument] incompatible argument for parameter files of SevenZip.collectFiles.
                collectFiles(childName, file.listFiles());
                                                      ^
  found   : @Initialized @NonNull File @Initialized @Nullable []
  required: @Initialized @NonNull File @Initialized @NonNull []
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/SevenZip.java:67: error: [method.invocation] call to collectFiles(java.lang.String,java.io.File...) not allowed on the given receiver.
        collectFiles("", files);
                    ^
  found   : @UnderInitialization @NonNull SevenZip
  required: @Initialized @NonNull SevenZip
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Encoder.java:153: error: [initialization.field.uninitialized] the default constructor does not initialize field m_Coders
        Encoder2[] m_Coders;
                   ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Encoder.java:317: error: [assignment] incompatible types in assignment.
    private com.swemel.sevenzip.compression.lz.BinTree _matchFinder = null;
                                                                      ^
  found   : null (NullType)
  required: @Initialized @NonNull BinTree
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Encoder.java:1296: error: [assignment] incompatible types in assignment.
            _matchFinder = null;
                           ^
  found   : null (NullType)
  required: @Initialized @NonNull BinTree
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/FileItem.java:72: error: [return] incompatible types in return.
        return name;
               ^
  type of expression: @Initialized @Nullable String
  method return type: @Initialized @NonNull String
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/common/ByteBuffer.java:15: error: [return] incompatible types in return.
        return items;
               ^
  type of expression: @Initialized @NonNull byte @Initialized @Nullable []
  method return type: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/common/ByteBuffer.java:32: error: [argument] incompatible argument for parameter arg0 of System.arraycopy.
                System.arraycopy(items, 0, newBuffer, 0, len);
                                 ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull Object
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/BinTree.java:41: error: [initialization.field.uninitialized] the default constructor does not initialize field _son
    private int[] _son;
                  ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/BinTree.java:42: error: [initialization.field.uninitialized] the default constructor does not initialize field _hash
    private int[] _hash;
                  ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/InWindow.java:36: error: [initialization.field.uninitialized] the default constructor does not initialize field _bufferBase
    byte[] _bufferBase; // pointer to buffer with data
           ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/InWindow.java:74: error: [dereference.of.nullable] dereference of possibly-null reference _stream
            int numReadBytes = _stream.read(_bufferBase, _bufferOffset + _streamPos, size);
                               ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/InWindow.java:93: error: [assignment] incompatible types in assignment.
        _bufferBase = null;
                      ^
  found   : null (NullType)
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Encoder.java:45: error: [dereference.of.nullable] dereference of possibly-null reference Stream
        Stream.flush();
        ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Encoder.java:54: error: [dereference.of.nullable] dereference of possibly-null reference Stream
                Stream.write(temp + LowHi);
                ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/CRC.java:59: error: [accessing.nullable] accessing a possibly-null array data
            _value = table[(_value ^ data[i]) & 0xFF] ^ (_value >>> 8);
                                     ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/SevenZipFolderInStream.java:14: error: [initialization.field.uninitialized] the default constructor does not initialize field stream
    private InStreamWithCRC stream;
                            ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/SevenZipFolderInStream.java:38: error: [dereference.of.nullable] dereference of possibly-null reference updateItems
            stream = new InStreamWithCRC(updateItems.get(off + _fileIndex).getFullName());
                                         ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/common/InStreamWithCRC.java:17: error: [argument] incompatible argument for parameter pathname of File constructor.
        stream = new RandomAccessFile(new File(fileName), "r");
                                               ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/OutArchive.java:27: error: [initialization.fields.uninitialized] the constructor does not initialize fields: stream, crc
    public OutArchive() {
           ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/OutArchive.java:122: error: [dereference.of.nullable] dereference of possibly-null reference coder.getProps()
                int propsSize = coder.getProps().getCapacity();
                                              ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/OutArchive.java:146: error: [argument] incompatible argument for parameter props of OutArchive.writeBytes.
                writeBytes(coder.getProps(), propsSize);
                                         ^
  found   : @Initialized @Nullable ByteBuffer
  required: @Initialized @NonNull ByteBuffer
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/common/OutBuffer.java:45: error: [accessing.nullable] accessing a possibly-null array _buffer
        _buffer[_pos++] = b;
        ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/common/OutBuffer.java:59: error: [argument] incompatible argument for parameter b of OutputStream.write.
            _stream.write(_buffer, _streamPos, size);
                          ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/OutWindow.java:36: error: [initialization.field.uninitialized] the default constructor does not initialize field _buffer
    private byte[] _buffer;
                   ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/OutWindow.java:73: error: [dereference.of.nullable] dereference of possibly-null reference _stream
        _stream.write(_buffer, _streamPos, size);
        ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Decoder.java:16: error: [initialization.field.uninitialized] the default constructor does not initialize field Stream
    private java.io.InputStream Stream;
                                ^
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Decoder.java:23: error: [assignment] incompatible types in assignment.
        Stream = null;
                 ^
  found   : null (NullType)
  required: @Initialized @NonNull InputStream
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Decoder.java:112: error: [initialization.field.uninitialized] the default constructor does not initialize field m_Coders
        Decoder2[] m_Coders;
                   ^
29 errors
